--- a/P2/project/styles/components/button.css
+++ b/P2/project/styles/components/button.css
@@ -4,11 +4,16 @@
   padding: 8px 16px;
   border-radius: 25px;
   text-decoration: none;
+  font-weight: 500;
 }
 
 .btn:hover {
   background-color: var(--primary-color-dark);
-  color: var(--background-color);
+  color: var(--text-color);
   transition: background-color 0.3s ease;
+  -webkit-transition: background-color 0.3s ease;
+  -moz-transition: background-color 0.3s ease;
+  -ms-transition: background-color 0.3s ease;
+  -o-transition: background-color 0.3s ease;
 }
 
