--- a/P2/project/styles/components/hero.css
+++ b/P2/project/styles/components/hero.css
@@ -1,27 +1,57 @@
 .hero {
-    height: 100vh;
-    color: var(--text-color);
-    padding: 100px 0;
-    align-items: center;
-    display: flex;
-    justify-content: space-around;
+  height: 100vh;
+  color: var(--text-color);
+  padding: 100px 0;
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
 }
 
 .hero h1 {
-    font-size: 2.5rem;
-    font-family: var(--fancy-font);
-    margin-bottom: 1rem;
-    max-width: 600px;
+  font-size: 2.5rem;
+  font-family: var(--fancy-font);
+  margin-bottom: 1rem;
+  max-width: 600px;
 }
 
 .hero p {
-    font-size: 1.25rem;
-    max-width: 600px;
-    margin-bottom: 2rem;
+  font-size: 1.25rem;
+  max-width: 600px;
+  margin-bottom: 2rem;
 }
 
 .hero-text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.hero-footer {
+  background-color: var(--background-color);
+  border: 1px solid var(--border-color);
+  border-radius: 30px;
+  padding: 5px 18px;
+  position: absolute;
+  bottom: 5px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+}
+
+.hero-footer img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+}
+
+.hero-footer p {
+  margin: 0;
+  color: var(--text-color);
 }
