--- a/P2/project/styles/pages/about.css
+++ b/P2/project/styles/pages/about.css
@@ -1,6 +1,7 @@
-.about{
-    display: flex;
-    justify-content: space-around;
+.about {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .about-title {
@@ -20,20 +21,67 @@
 }
 
 .about-banner {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 50px;
-    flex-wrap: wrap;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 50px;
+  flex-wrap: wrap;
 }
 
-.about-content-1, .about-content-2, .about-content-3 {
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
+.about-content-1,
+.about-content-2,
+.about-content-3 {
+  position: absolute;
+  width: 250px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.about-content-1 {
+  opacity: 0.9;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 3;
+}
+
+.about-content-2 {
+  opacity: 0.9;
+  bottom: 60px;
+  left: 0%;
+  transform: translateX(-20%);
+  z-index: 2;
+}
+
+.about-content-3 {
+  opacity: 0.9;
+  bottom: 20px;
+  right: -5%;
+  transform: translateX(40%);
+  z-index: 1;
+}
+
+.about-logo{
+  width: 450px;
+  height: 450px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.about-text {
+  max-width: 600px;
+  margin: 0 auto;
+  font-size: 1.2em;
+  line-height: 1.6;
+  color: var(--text-color);
+  padding: 0 20px;
+}
+
+.about-text p {
+  margin-bottom: 40px;
 }
